--- a/index.html
+++ b/index.html
@@ -16,11 +16,15 @@
         <button id="search-button">Search</button>
       </div>
       <div class="nav-links" id="nav-links">
-        <a href="https://yourportfolio.com" target="_blank" class="icon-link">
+        <a
+          href="https://ashutoshrajgupta.github.io/Me/"
+          target="_blank"
+          class="icon-link"
+        >
           <img src="./assets/portfolio.png" alt="Portfolio" class="icon" />
         </a>
         <a
-          href="https://linkedin.com/in/yourprofile"
+          href="https://www.linkedin.com/in/ashutosh-raj-gupta-18230820b/"
           target="_blank"
           class="icon-link"
         >
@@ -62,42 +66,46 @@ sayHello();
       <h2>NOTES SECTION || STUDY RESOURCES</h2>
       <div class="pdf-list" id="pdf-list">
         <div class="pdf-item">
-          <a href="./assets//pdf1.pdf" target="_blank">PDF 1</a>
+          <a href="./assets//dsa.pdf" target="_blank">DSA</a>
         </div>
         <div class="pdf-item">
-          <a href="./assets//pdf2.pdf" target="_blank">PDF 2</a>
+          <a href="./assets//ooos-cpp.pdf" target="_blank">CPP-OOPS</a>
         </div>
         <div class="pdf-item">
-          <a href="./pdfs/pdf3.pdf" target="_blank">PDF 3</a>
+          <a href="./assets/sql.pdf" target="_blank">SQL</a>
         </div>
         <div class="pdf-item">
-          <a href="./assets//pdf1.pdf" target="_blank">PDF 4</a>
+          <a href="./assets//pdf1.pdf" target="_blank">PYTHON</a>
         </div>
         <div class="pdf-item">
-          <a href="./assets//pdf2.pdf" target="_blank">PDF 5</a>
+          <a href="./assets//dbms.pdf" target="_blank">DBMS</a>
         </div>
         <div class="pdf-item">
-          <a href="./pdfs/pdf3.pdf" target="_blank">PDF 6</a>
+          <a href="./assets//os.pdf" target="_blank">OPERATING SYSTEM</a>
         </div>
         <div class="pdf-item">
-          <a href="./assets//pdf1.pdf" target="_blank">PDF 7</a>
+          <a href="./assets//cn.pdf" target="_blank">COMPUTER NETWORk</a>
         </div>
         <div class="pdf-item">
-          <a href="./assets//pdf2.pdf" target="_blank">PDF 8</a>
+          <a href="./assets//React_merged.pdf" target="_blank">REACT 1</a>
         </div>
         <div class="pdf-item">
-          <a href="./pdfs/pdf3.pdf" target="_blank">PDF 9</a>
+          <a href="./assets//reactjs.pdf" target="_blank">REACT 2</a>
         </div>
         <div class="pdf-item">
-          <a href="./assets//pdf1.pdf" target="_blank">PDF 10</a>
+          <a href="./assets//mernstack.pdf" target="_blank">MERN STACK</a>
         </div>
         <div class="pdf-item">
-          <a href="./assets//pdf2.pdf" target="_blank">PDF 11</a>
+          <a href="./assets//flutter-clean.pdf" target="_blank"
+            >FLUTTER CLEAN ARCHITECTURE</a
+          >
         </div>
         <div class="pdf-item">
-          <a href="./pdfs/pdf3.pdf" target="_blank">PDF 12</a>
+          <a href="./assets//web.pdf" target="_blank">WEB</a>
         </div>
-        <!-- Add more PDF items as needed -->
+        <div class="pdf-item">
+          <a href="./assets//mysql-react.pdf" target="_blank">MYSQL-REACT</a>
+        </div>
       </div>
     </section>
 
@@ -105,9 +113,17 @@ sayHello();
       <h2>YOUTUBE SECTION || VIDEO RESOURCES</h2>
       <div class="youtube-list" id="youtube-list">
         <div class="youtube-item">
-          <p>Learn React in 30 Minutes</p>
+          <p>MERN Stack Tutorial</p>
           <button
-            onclick="window.open('https://www.youtube.com/watch?v=dGcsHMXbSOA', '_blank')"
+            onclick="window.open('https://www.youtube.com/watch?v=A_-fn_ij59c&list=PLuHGmgpyHfRyM2UjMpOhwys4GFURK5Tz2&index=1', '_blank')"
+          >
+            Watch
+          </button>
+        </div>
+        <div class="youtube-item">
+          <p>React Tutorial</p>
+          <button
+            onclick="window.open('https://www.youtube.com/watch?v=RVFAyFWO4go', '_blank')"
           >
             Watch
           </button>
@@ -115,7 +131,7 @@ sayHello();
         <div class="youtube-item">
           <p>JavaScript Crash Course</p>
           <button
-            onclick="window.open('https://www.youtube.com/watch?v=hdI2bqOjy3c', '_blank')"
+            onclick="window.open('https://www.youtube.com/playlist?list=PLlasXeu85E9cQ32gLCvAvr9vNaUccPVNP', '_blank')"
           >
             Watch
           </button>
@@ -123,31 +139,39 @@ sayHello();
         <div class="youtube-item">
           <p>Python for Beginners</p>
           <button
-            onclick="window.open('https://www.youtube.com/watch?v=rfscVS0vtbw', '_blank')"
+            onclick="window.open('https://www.youtube.com/playlist?list=PLGjplNEQ1it8-0CmoljS5yeV-GlKSUEt0', '_blank')"
           >
             Watch
           </button>
         </div>
         <div class="youtube-item">
-          <p>Python for Beginners</p>
+          <p>SQL crash Course</p>
           <button
-            onclick="window.open('https://www.youtube.com/watch?v=rfscVS0vtbw', '_blank')"
+            onclick="window.open('https://www.youtube.com/watch?v=RQPpP2ywA9k&list=PLrL_PSQ6q062H5CetdplYW7xQKeq8XaR0&index=41&t=1s', '_blank')"
           >
             Watch
           </button>
         </div>
         <div class="youtube-item">
-          <p>Python for Beginners</p>
+          <p>DSA Course - Codehelp</p>
           <button
-            onclick="window.open('https://www.youtube.com/watch?v=rfscVS0vtbw', '_blank')"
+            onclick="window.open('https://www.youtube.com/playlist?list=PLDzeHZWIZsTryvtXdMr6rPh4IDexB5NIA', '_blank')"
           >
             Watch
           </button>
         </div>
         <div class="youtube-item">
-          <p>Python for Beginners</p>
+          <p>DSA Course - Apna College</p>
           <button
-            onclick="window.open('https://www.youtube.com/watch?v=rfscVS0vtbw', '_blank')"
+            onclick="window.open('https://www.youtube.com/playlist?list=PLfqMhTWNBTe0b2nM6JHVCnAkhQRGiZMSJ', '_blank')"
+          >
+            Watch
+          </button>
+        </div>
+        <div class="youtube-item">
+          <p>Flutter clean Architecture</p>
+          <button
+            onclick="window.open('https://www.youtube.com/watch?v=ELFORM9fmss', '_blank')"
           >
             Watch
           </button>
@@ -160,29 +184,66 @@ sayHello();
       <h2>Projects</h2>
       <div class="projects-list">
         <div class="project-card">
-          <h3>Project 1</h3>
-          <a href="https://github.com/yourprofile/project1" target="_blank"
+          <h3>CLEAN ARCHITECTURE BLOG APP FLUTTER</h3>
+          <a
+            href="https://github.com/AshutoshRajGupta/flutter-clean-architecture-blogApp"
+            target="_blank"
             >GitHub</a
           >
-          <a href="https://youtube.com/watch?v=yourvideo1" target="_blank"
+          <a href="https://www.youtube.com/watch?v=ELFORM9fmss" target="_blank"
             >YouTube</a
           >
         </div>
         <div class="project-card">
-          <h3>Project 2</h3>
-          <a href="https://github.com/yourprofile/project2" target="_blank"
+          <h3>FLUTTER TODO APP</h3>
+          <a
+            href="https://github.com/AshutoshRajGupta/ToDo_UI_FLutter"
+            target="_blank"
             >GitHub</a
           >
-          <a href="https://youtube.com/watch?v=yourvideo2" target="_blank"
+          <a href="#" target="_blank">YouTube</a>
+        </div>
+        <div class="project-card">
+          <h3>ECOMMERCE MERN PROJECT</h3>
+          <a
+            href="https://github.com/AshutoshRajGupta/Ecommerce-Shopping"
+            target="_blank"
+            >GitHub</a
+          >
+          <a
+            href="https://www.youtube.com/watch?v=A_-fn_ij59c&list=PLuHGmgpyHfRyM2UjMpOhwys4GFURK5Tz2&index=1"
+            target="_blank"
             >YouTube</a
           >
         </div>
         <div class="project-card">
-          <h3>Project 3</h3>
-          <a href="https://github.com/yourprofile/project3" target="_blank"
+          <h3>CRYPTDRIVE</h3>
+          <a
+            href="https://github.com/AshutoshRajGupta/cryptdrive_version_2"
+            target="_blank"
             >GitHub</a
           >
-          <a href="https://youtube.com/watch?v=yourvideo3" target="_blank"
+        </div>
+
+        <div class="project-card">
+          <h3>POS APPLICATION</h3>
+          <a
+            href="https://github.com/AshutoshRajGupta/pos_application"
+            target="_blank"
+            >GitHub</a
+          >
+          <a href="https://www.youtube.com/watch?v=wdeedpLh_5k" target="_blank"
+            >YouTube</a
+          >
+        </div>
+        <div class="project-card">
+          <h3>BLOG APP</h3>
+          <a
+            href="https://github.com/AshutoshRajGupta/mern_blog"
+            target="_blank"
+            >GitHub</a
+          >
+          <a href="https://www.youtube.com/watch?v=EY5Kbt0sx5g" target="_blank"
             >YouTube</a
           >
         </div>
