--- a/index.html
+++ b/index.html
@@ -52,11 +52,15 @@
         </div>
         <pre class="code-block">
 <code>
-function sayHello() {
-    console.log('Hello, World!');
-}
+  const summonDragon = () => 
+  console.log("🔥 Summoning Dragon
+  : 🐉 ROAR! 🔥");
 
-sayHello();
+  const quantumLeap = () => 
+  console.log("🚀 Initiating Quantum Leap
+  : 🌌 *zap* 🌟");
+
+
 </code>
             </pre>
       </div>
