--- a/index.html
+++ b/index.html
@@ -157,6 +157,18 @@
             >Flutter Clean Architecture</a
           >
         </li>
+        <li>
+          <a
+            href="https://www.youtube.com/watch?v=TXlu7nUMjCw&t=7844s"
+            target="_blank"
+            >Gen Ai &Nextjs</a
+          >
+        </li>
+        <li>
+          <a href="https://www.youtube.com/watch?v=QmUsG_3wHPg" target="_blank"
+            >langflow</a
+          >
+        </li>
       </ul>
     </div>
 
